tests/baselines/reference/ES5For-of34.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of34.ts(4,6): error TS2322: Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of34.ts (1 errors) ====
    function foo() {
        return { x: 0 };
    }
    for (foo().x of ['a', 'b', 'c']) {
         ~~~~~~~
!!! error TS2322: Type '文字' is not assignable to type '数字'.
        var p = foo().x;
    }